Code of conduct dark mode text color fixed (#365)
* Code of conduct dark mode text color fixed

* Code of conduct dark mode text color fix 2

--- a/src/app/components/code-of-conduct/code-of-conduct.component.css
+++ b/src/app/components/code-of-conduct/code-of-conduct.component.css
@@ -7,6 +7,8 @@
 
 h2,
 h3,
-p {
+p,
+ul {
   text-align: justify;
+  color: var(--text-color-primary);
 }
